Add more features to the website and tickets section

--- a/index.html
+++ b/index.html
@@ -36,22 +36,22 @@
               <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
                 <ul class="navbar-nav me-auto mb-2 mb-md-0 d-block d-md-flex justify-content-end w-100">
                   <li class="nav-item p-2">
-                    <a class="nav-link active" aria-current="page" href="#">About</a>
+                    <a class="nav-link active" aria-current="page" href="#">Home</a>
+                  </li>
+                  <li class="nav-item ps-md-4 p-2">
+                    <a class="nav-link" href="#">About</a>
+                  </li>
+                  <li class="nav-item ps-md-4 p-2">
+                    <a class="nav-link" href="#">Tickets</a>
                   </li>
                   <li class="nav-item ps-md-4 p-2">
                     <a class="nav-link" href="#">Program</a>
                   </li>
                   <li class="nav-item ps-md-4 p-2">
-                    <a class="nav-link" href="#">Join</a>
-                  </li>
-                  <li class="nav-item ps-md-4 p-2">
-                    <a class="nav-link" href="#">Sponsor</a>
-                  </li>
-                  <li class="nav-item ps-md-4 p-2">
-                    <a class="nav-link" href="#">News</a>
+                    <a class="nav-link" href="#">Sponsors</a>
                   </li>
                   <li class="nav-item m-0 ps-md-4">
-                    <button class="Navbar-button"> CC Campaign</button>
+                    <button class="Navbar-button">Enroll it</button>
                   </li>
                 </ul>
               </div>
@@ -59,18 +59,120 @@
           </nav>
     </header>
     <main>
+      <!--MAIN-HOME section STARTS-->
         <section>
             <div class="container-fluid hero-page">
-                <div class="row">
-                    <div class="col-12 col-md-6">
-
+                <div class="container-md">
+                  <div class="row">
+                    <div class="col-12 col-md-10">
+                      <article class="mt-5 pt-5 main-section">
+                        <div class="d-block mt-5 pt-5">"Hello! Computer Visioner"</div>
+                        <h1 class="mt-2">MASTER COMPUTER VISION'S BOOTCAMP</h1>
+                        <p class="border border-white m-0 p-2">Welcome to enjoyfull adventure to become a computer vision engineer, we are excited to have you in our online bootcamp.</p>
+                        <h2 class="fs-3 fs-md-1 mt-4 text-dark fw-bold">2021.10.15(THU) ~ 16(FRI)</h2>
+                        <p class="fs-5">@ ComputerVZ Companie - León, GTO.</p>
+                      </article>
                     </div>
+                  </div>
                 </div>
             </div>
         </section>
+        <!--MAIN-HOME section ENDS-->
+        <!--About section STARTS-->
+        <section>
+          <div class="container-fluid about-page">
+              <div class="container-md">
+                <div class="row">
+                  <div class="col-12">
+                    <article class="mt-5 pt-0 about-section">
+                      <h2 class="mt-2">MASTER COMPUTER VISION'S BOOTCAMP</h2>
+                      <p class="border border-white mt-3 p-2">Check out about our Master to become a computer vision engineer.</p>
+                      <div class="my-2 about-line"></div>
+                    </article>
+                    <div class="about-cards mt-5">
+                      <div class="about-item">
+                        <a href="#"><img src="img/036-computer.svg" alt="about-image1" height="84"></a>
+                        <h3>About</h3>
+                        <p>Hello guys! Add text here please, I feel alone :(</p>
+                      </div>
+                      <div class="about-item">
+                        <a href="#"><img src="img/036-computer.svg" alt="about-image1" height="84"></a>
+                        <h3>About</h3>
+                        <p>Hello guys! Add text here please, I feel alone :(</p>
+                      </div>
+                      <div class="about-item">
+                        <a href="#"><img src="img/036-computer.svg" alt="about-image1" height="84"></a>
+                        <h3>About</h3>
+                        <p>Hello guys! Add text here please, I feel alone :(</p>
+                      </div>
+                      <div class="about-item">
+                        <a href="#"><img src="img/036-computer.svg" alt="about-image1" height="84"></a>
+                        <h3>About</h3>
+                        <p>Hello guys! Add text here please, I feel alone :(</p>
+                      </div>
+                    </div>
+                    <a href="#" class="d-block text-white text-center my-5 fs-5">SEE THE COMPLETE PROGRAM</a>
+                  </div>
+                </div>
+              </div>
+          </div>
+      </section>
+      <section>
+        <div class="container-fluid ticket-page">
+            <div class="container-md">
+              <div class="row">
+                <div class="col-12">
+                  <article class="mt-5 pt-0 ticket-section">
+                    <h2 class="mt-2 text-center">Select Tickets</h2>
+                    <div class="my-3 about-line"></div>
+                    <p class="border border-ight rounded-pill mt-3 p-2 text-center tickets-instructions"> <strong>FIRSTABLE:</strong> Select the day you want to start.</p>
+                    <div class="ticket-grid my-5 text-center align-items-center">
+                      <div class="div1">Ticket </div>
+                      <div class="div2">3 Months-Ticket </div>
+                      <div class="div3">3 Months + Curriculum-Ticket </div>
+                      <div class="div4">CC Afilliate/Partners</div>
+                      <div class="div5">Date STARTS</div>
+                      <div class="div6">15. Oct (Thu)</div>
+                      <div class="div7">24. Oct (Fri)</div>
+                      <div class="div8">23-24. Oct (Thu-Fri)</div>
+                      <div class="div9">23-24. Oct (Thu-Fri)</div>
+                      <div class="div10">Normal</div>
+                      <div class="div11 price-grid d-flex flex-column justify-content-center">USD 750
+                        <input class="mx-auto my-3" type="radio" id="normal-750-date1" name="price-selected" value="usd750">
+                      </div>
+                      <div class="div12 price-grid d-flex flex-column justify-content-center">USD 750
+                        <input class="mx-auto my-3" type="radio" id="normal-750-date2" name="price-selected" value="usd750">
+                      </div>
+                      <div class="div13 price-grid d-flex flex-column justify-content-center">USD 1250
+                        <input class="mx-auto my-3" type="radio" id="normal-1250-date3" name="price-selected" value="usd1250">
+                      </div>
+                      <div class="div14 price-grid d-flex flex-column justify-content-center">USD 10
+                        <input class="mx-auto my-3" type="radio" id="normal-10-vip" name="price-selected" value="usd10">
+                      </div>
+                      <div class="div15">Students</div>
+                      <div class="div16 price-grid d-flex flex-column justify-content-center">USD 450
+                        <input class="mx-auto my-3" type="radio" id="student-450-date1" name="price-selected" value="usd450">
+                      </div>
+                      <div class="div17 price-grid d-flex flex-column justify-content-center">USD 450
+                        <input class="mx-auto my-3" type="radio" id="student-450-date2" name="price-selected" value="usd450">
+                      </div>
+                      <div class="div18 price-grid d-flex flex-column justify-content-center">USD 650
+                        <input class="mx-auto my-3" type="radio" id="student-650-date3" name="price-selected" value="usd650">
+                      </div>
+                      <div class="div19 price-grid d-flex flex-column justify-content-center">USD 0
+                        <input class="mx-auto my-3" type="radio" id="student-0-vip" name="price-selected" value="usd0">
+                      </div>
+                      </div>
+                  </article>
+                </div>
+              </div>
+            </div>
+        </div>
+    </section>
+      <!--About section ENDS-->
     </main>
     <footer>
-
+      <div>Icons made by <a href="https://www.flaticon.com/authors/good-ware" title="Good Ware">Good Ware</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div>
     </footer>
     <!--Import Lato Font-->
     <style>
