Add new links to README.md and Change width of about-cards

--- a/index.html
+++ b/index.html
@@ -190,8 +190,8 @@
           <div class="col-12">
             <ul class="d-flex justify-content-center m-0 p-0">
               <li><a href="#"><i class='bx bxl-facebook-circle'></i></a></li>
-              <li><a href="#"></a><i class='bx bxl-twitter'></i></li>
-              <li><a href="#"></a><i class='bx bxl-youtube'></i></li>
+              <li><a href="#"><i class='bx bxl-twitter'></i></a></i></li>
+              <li><a href="#"><i class='bx bxl-youtube'></i></a></i></li>
             </ul>
           </div>
         </div>
