--- a/index.html
+++ b/index.html
@@ -12,7 +12,11 @@
     <link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <!--Lato Google Font-->
-<link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400&display=swap" rel="stylesheet">
+    <!--Import Lato Font-->
+    <style>
+      @import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400&display=swap');
+    </style>
 </head>
 <body>
     <header>
@@ -32,7 +36,7 @@
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
-              <a class="navbar-brand" href="#"><img src="img/Companie's logo.svg" alt="companie's logo" height="86"></a>
+              <a class="navbar-brand" href="#"><img src="img/compainesLogo.svg" alt="companies-logo" height="86"></a>
               <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
                 <ul class="navbar-nav me-auto mb-2 mb-md-0 d-block d-md-flex justify-content-end w-100">
                   <li class="nav-item p-2">
@@ -51,7 +55,7 @@
                     <a class="nav-link" href="#">Sponsors</a>
                   </li>
                   <li class="nav-item m-0 ps-md-4">
-                    <button class="Navbar-button">Enroll it</button>
+                    <button class="Navbar-button" type="menu">Enroll it</button>
                   </li>
                 </ul>
               </div>
@@ -190,8 +194,8 @@
           <div class="col-12">
             <ul class="d-flex justify-content-center m-0 p-0">
               <li><a href="#"><i class='bx bxl-facebook-circle'></i></a></li>
-              <li><a href="#"><i class='bx bxl-twitter'></i></a></i></li>
-              <li><a href="#"><i class='bx bxl-youtube'></i></a></i></li>
+              <li><a href="#"><i class='bx bxl-twitter'></i></a></li>
+              <li><a href="#"><i class='bx bxl-youtube'></i></a></li>
             </ul>
           </div>
         </div>
@@ -204,10 +208,6 @@
         </div>
       </div>
     </footer>
-    <!--Import Lato Font-->
-    <style>
-        @import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400&display=swap');
-    </style>
     <!--Bootstrap JS-->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.1/dist/umd/popper.min.js" integrity="sha384-SR1sx49pcuLnqZUnnPwx6FCym0wLsk5JZuNx2bPPENzswTNFaQU1RDvt3wT4gWFG" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.min.js" integrity="sha384-j0CNLUeiqtyaRmlzUHCPZ+Gy5fQu0dQ6eZ/xAww941Ai1SxSY+0EQqNXNE6DZiVc" crossorigin="anonymous"></script>
