Fix linters errors

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                     <a class="nav-link" href="#">Sponsors</a>
                   </li>
                   <li class="nav-item m-0 ps-md-4">
-                    <button class="Navbar-button" type="menu">Enroll it</button>
+                    <button class="Navbar-button" type="button">Enroll it</button>
                   </li>
                 </ul>
               </div>
