--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     </style>
 </head>
 <body>
+    <!-- Navbar section STARTS -->
     <header>
         <div class="container-fluid first-navbar">
             <nav class="d-none d-md-block navbar-light">
@@ -43,10 +44,10 @@
                     <a class="nav-link active" aria-current="page" href="#">Home</a>
                   </li>
                   <li class="nav-item ps-md-4 p-2">
-                    <a class="nav-link" href="#">About</a>
+                    <a class="nav-link" href="#about-section">About</a>
                   </li>
                   <li class="nav-item ps-md-4 p-2">
-                    <a class="nav-link" href="#">Tickets</a>
+                    <a class="nav-link" href="#tickets-section">Tickets</a>
                   </li>
                   <li class="nav-item ps-md-4 p-2">
                     <a class="nav-link" href="#">Program</a>
@@ -62,6 +63,7 @@
             </div>
           </nav>
     </header>
+    <!-- Navbar section ENDS -->
     <main>
       <!--MAIN-HOME section STARTS-->
         <section>
@@ -83,7 +85,7 @@
         </section>
         <!--MAIN-HOME section ENDS-->
         <!--About section STARTS-->
-        <section>
+        <section id="about-section">
           <div class="container-fluid about-page p-0">
               <div class="container-md">
                 <div class="row">
@@ -129,7 +131,9 @@
               </div>
           </div>
       </section>
-      <section>
+      <!--About section ENDS-->
+      <!-- Tickets section STARTS -->
+      <section id="tickets-section">
         <div class="container-fluid ticket-page">
             <div class="container-md">
               <form id="register-form" action="#" method="GET">
@@ -185,9 +189,10 @@
             </form>
             </div>
         </div>
-    </section>
-      <!--About section ENDS-->
+      </section>
+      <!-- Tickets section STARTS -->
     </main>
+    <!-- Footer STARTS -->
     <footer>
       <div class="container-md">
         <div class="row mt-3">
@@ -208,6 +213,7 @@
         </div>
       </div>
     </footer>
+    <!-- Footer ENDS -->
     <!--Bootstrap JS-->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.1/dist/umd/popper.min.js" integrity="sha384-SR1sx49pcuLnqZUnnPwx6FCym0wLsk5JZuNx2bPPENzswTNFaQU1RDvt3wT4gWFG" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.min.js" integrity="sha384-j0CNLUeiqtyaRmlzUHCPZ+Gy5fQu0dQ6eZ/xAww941Ai1SxSY+0EQqNXNE6DZiVc" crossorigin="anonymous"></script>
