Add h1 to tickets.html and navbar is fixed

--- a/tickets.html
+++ b/tickets.html
@@ -73,7 +73,7 @@
             <div class="row">
             <div class="col-12">
                 <article class="mt-5 pt-0 ticket-section">
-                <h2 class="mt-2 text-center">Select Tickets</h2>
+                <h1 class="mt-2 text-center title-tickets">Select Tickets</h1>
                 <div class="my-3 about-line"></div>
                 <p class="border border-light rounded-pill mt-3 p-2 text-center tickets-instructions"> <strong>FIRSTABLE:</strong> Select the day you want to start.</p>
                 <div class="ticket-grid my-5 text-center align-items-center">
