Fix position issues

--- a/about.html
+++ b/about.html
@@ -69,8 +69,8 @@
     <section>
         <div class="container-fluid hero-page">
             <div class="container-md">
-              <div class="row">
-                <div class="col-12 mt-5 mt-md-0">
+              <div class="row pt-md-5">
+                <div class="col-12 mt-5 pt-5 mt-md-0">
                   <article class="mt-5 pt-4 about-main-section text-center">
                     <h1 class="mt-2 py-2 w-md-75">MASTER COMPUTER VISION BOOTCAMP</h1>
                     <div class="my-4 about-line"></div>
