--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             <div class="container-fluid hero-page">
                 <div class="container-md">
                   <div class="row">
-                    <div class="col-12 col-md-10">
+                    <div class="col-12 col-md-10 mt-5">
                       <article class="mt-5 pt-4 main-section">
                         <div class="d-block mt-5 pt-5">"Hello! Computer Visioner"</div>
                         <h1 class="mt-2">MASTER COMPUTER VISION'S BOOTCAMP</h1>
