--- a/tickets.html
+++ b/tickets.html
@@ -67,8 +67,8 @@
     <!-- Navbar section ENDS -->
           <!-- Tickets section STARTS -->
     <section id="tickets-section">
-    <div class="container-fluid ticket-page">
-        <div class="container-md">
+    <div class="container-fluid ticket-page py-5">
+        <div class="container-md pt-5">
             <form id="register-form" action="#" method="GET">
             <div class="row">
             <div class="col-12">
